# wizard-wizard

./: .gitmodules  CLAUDE.md  README.md  pyproject.toml
dice_agent/: agent.py
spell_agent/: agent.py
spell_agent/tools/: __init__.py  shared.py  spells.py
tests/spell_agent/: test_spells.py
tests/wizard_agent/: test_backgrounds.py  test_dice.py  test_races.py  test_spells.py
tests/wizard_agent/tools/: test_character_sheet.py
wizard_agent/: README.md  WIZARD_PATTERN.md  agent.py
wizard_agent/agents/: __init__.py  ability_score_agent.py  background_agent.py  cantrip_agent.py  class_agent.py  derived_stats_agent.py  prepared_spells_agent.py  race_agent.py  spellbook_agent.py  spellcasting_agent.py  validation_agent.py
wizard_agent/data/: backgrounds.json  races.json
wizard_agent/evals/: wizard_builder.evalset.json
wizard_agent/models/: __init__.py  character_sheet.py
wizard_agent/tools/: __init__.py  backgrounds.py  base.py  character_sheet.py  dice.py  races.py  spells.py
